--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<!-- you can modify this as needed or to your preference -->
 		<link href="world.css" type="text/css" rel="stylesheet" />
-
+      
 		<!-- you write this -->
 		<script src="world.js" type="text/javascript"></script>
 	</head>
@@ -21,6 +21,7 @@
 				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
 				<button id="lookup">Lookup</button>
+                <button id="lookup2">Lookup Cities</button>
 			</div>
 			
 			<div id="result">
